src/test/deca/syntax/invalid/homemade/test/test_lex_inv_circular_include2-2.deca
// Test circular include
#include "test_lex_inv_circular_include2-3.deca"